# GPMSelenium

./: .gitignore  LICENSE  README.md  data.xlsx  launch_gui.py  pyproject.toml  repair_venv.bat
GPMSelenium-OpenSource-v1.0/: gpm_selenium.sqlite3  requirements.txt  run_gui.bat
GPMSelenium-OpenSource-v1.0/src/gpm_selenium/: contracts.py  excel.py  gpm.py  store.py  task_loader.py
GPMSelenium-OpenSource-v1.0/tasks/: expandtesting_register.py
docs/: AI_SCRIPT_GUIDE.md  AI_WIZARD_GUIDE.md  BROWSEROS_SCOUT_GUIDE.md  CODEBASE_STRUCTURE.md  DOCS_INDEX.md  METAMASK_WALLET_STATUS.md  README_FOR_AI.md  SCOUT_TO_PRODUCTION_LIFECYCLE.md  UI_UX_BEST_PRACTICES.md  WALLET_LIB_BEST_PRACTICES.md
extension_record_flow/: background.js  content.js  manifest.json  popup.html  popup.js
scripts/: auto_scout.py  metamask_live_scout.py  scout_profile.py  scout_server.py
src/gpm_selenium/: __init__.py  cli.py  contracts.py  excel.py  gui.py  profile_rows.py  runner.py  session_cache.py  store.py  task_loader.py  ui_kit.py
tasks/: nof1_waitlist.py  punktxt_whitelist.py  rabbithole_waitlist.py  wallet_create.py  wallet_metamask_aio.py
tasks/helpers/: metamask_lib.py
