[project]
name = "gpm-selenium-platform"
version = "1.0.0"
description = "Local AI-code automation runtime for Selenium tasks on GPMLogin profiles."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "PySide6>=6.8.0",
    "requests>=2.32.3",
    "selenium>=4.25.0",
]

[project.scripts]
gpm-selenium = "gpm_selenium.gui:main"
gpm-selenium-run = "gpm_selenium.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
